this should work to generate a entery only it doesnt

--- a/index.html
+++ b/index.html
@@ -1,14 +1,33 @@
-<script src="https://www.gstatic.com/firebasejs/5.5.2/firebase.js"></script>
-<script>
-  // Initialize Firebase
-  // TODO: Replace with your project's customized code snippet
-  var config = {
-    apiKey: "AIzaSyDMujpxVSdyU5x3DHF_75UyRXc203ZdJY0",
-    authDomain: "wot-1819-briavers.firebaseapp.com",
-    databaseURL: "https://wot-1819-briavers.firebaseio.com",
-    projectId: "wot-1819-briavers",
-    storageBucket: "wot-1819-briavers.appspot.com",
-    messagingSenderId: "1030285743994"
-  };
-  firebase.initializeApp(config);
-</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Create a character</title>
+  <link rel="stylesheet" href="./assets/css/app.css">  
+
+
+</head>
+<body>
+
+
+  
+
+
+<h1>
+  generate a character
+
+</h1>
+
+<table id="arcade">
+
+  
+</table>
+<button onclick="createChar()">Create a character</button>
+
+
+  <script src="https://www.gstatic.com/firebasejs/5.5.2/firebase.js"></script>
+  <script src="./assets/js/app.js"></script>
+</body>
+</html>
