--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
 <button onclick="createChar()">Create a character</button>
 
 
-  <script src="https://www.gstatic.com/firebasejs/5.5.2/firebase.js"></script>
-  <script src="./assets/js/app.js"></script>
+Color: <input id="hexColor" class="jscolor">
+
+
+
+<script src="https://www.gstatic.com/firebasejs/5.5.2/firebase.js"></script>
+<script src="./assets/js/app.js"></script>
+<script src="./assets/js/jscolor.js"></script>
 </body>
 </html>
